assets/scss/bewelcome.scss
/* ... */
.metric .value {
  display: block;
  font-size: 28px;
  padding: 8px 15px 4px;
  text-align: center;
}

.metric .label {
  background: $primary;
  color: white;
  display: block;
  font-size: 12px;
  padding: 5px;
  text-align: center;
}

a.metric .value {
  color: black;
}

a.active .metric .value {
  color: white;
  background: $brand-primary
}

.card-columns {
  @include media-breakpoint-down(sm) {
    column-count: 1;
  }
  @include media-breakpoint-only(md) {
    column-count: 2;
  }
  @include media-breakpoint-only(lg) {
    column-count: 3;
  }
  @include media-breakpoint-only(xl) {
    column-count: 3;
  }
}

.nav-link {
  @include media-breakpoint-down(sm) {
    padding-right: $input-btn-padding-x-sm;
    padding-left: $input-btn-padding-x-sm;
  }
}

#editProfileTab .nav-tabs {
  display:none;
}

@include media-breakpoint-up(md) {
  #editProfileTab .nav-tabs {
    display: flex;
  }

  #editProfileTab .card {
    border: none;
  }

  #editProfileTab .card .card-header {
    display:none;
  }

  #editProfileTab .card .collapse{
    display:block;
  }
}

@include media-breakpoint-down(md){
  #editProfileTab .tab-pane {
    display: block !important;
    opacity: 1;
  }
}

#editProfileTab .nav-tabs {
  // border-bottom: $nav-tabs-border-width solid $nav-tabs-border-color;

  .nav-item {
    margin-bottom: -$nav-tabs-border-width;
  }

  .nav-link {
    font-size: $font-size-sm;
    line-height: $line-height-sm;
    padding: $input-btn-padding-y-sm;
    border: $nav-tabs-border-width solid transparent;
    background-color: $secondary;
    color: white;
    @include border-top-radius($nav-tabs-border-radius);

    &.disabled {
      color: $nav-link-disabled-color;
      background-color: transparent;
      border-color: transparent;
    }
  }

  .nav-link.active,
  .nav-item.show .nav-link {
    color: $white;
    background-color: $primary;
    border-color: $primary;
    border: none !important;
  }

}

@import "wiki";

/* styles for the accommodation checkboxes */
.checked {
   border-color: #f37000 !important;
   border-radius: 2px;
   background-color: #f37000 !important;
   outline: 0 !important;
   box-shadow: 0 0 0 0.2rem rgba(243, 112, 0, 1) !important;
}

.not_checked {
  border-color: #fff !important;
  border-radius: 2px;
  background-color: #fff !important;
  outline: 0 !important;
  box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 1) !important;
}

.alert-notice {
  @extend .alert-info;
}

.alert-error {
  @extend .alert-danger;
}

figure > img {
  max-width: 100%;
}

figure > figcaption {
  text-align: center;
}

.editor, .ck-editor__editable[role=textbox] {
  min-height: 10rem;
}

// Masonry
.grid-item {
  width:100%;
}

.grid-item-content img {
  display: block;
  max-width: 100%;
  margin: 0 auto;
}

.grid-item-content {
  margin: .25rem;
  padding: .25rem;
  background: #ddd;
  border: 1px solid #ccc;
}

.custom-file-label-fix {
  overflow: hidden;
  white-space: nowrap;
  // For text overflow we need also padding-right.
  // problem is the button width is not constant.
  padding-right: 6em;
  text-overflow: ellipsis;
}

@mixin make-td-col($size, $columns: $grid-columns) {
  width: percentage(math.div($size, $columns));
}

@each $breakpoint in map-keys($grid-breakpoints) {
  $infix: breakpoint-infix($breakpoint, $grid-breakpoints);

  @for $i from 1 through $grid-columns {
    td.col#{$infix}-#{$i}, th.col#{$infix}-#{$i} {
      @include make-td-col($i, $grid-columns);
    }
  }
}

.rangeslider,
.rangeslider__fill {
  display: block;
  -moz-box-shadow: inset 0px 1px 3px rgba(0, 0, 0, 0.3);
  -webkit-box-shadow: inset 0px 1px 3px rgba(0, 0, 0, 0.3);
  box-shadow: inset 0px 1px 3px rgba(0, 0, 0, 0.3);
  -moz-border-radius: 10px;
  -webkit-border-radius: 10px;
  border-radius: 10px;
}

.rangeslider {
  background: #e6e6e6;
  position: relative;
}

.rangeslider--horizontal {
  height: 20px;
  width: 100%;
}

.rangeslider--vertical {
  width: 20px;
  min-height: 150px;
  max-height: 100%;
  height: 100%;
}

.rangeslider--disabled {
  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=40);
  opacity: 0.4;
}

.rangeslider__fill {
  background: $brand-primary;
  background: -webkit-linear-gradient(to right, #fff , $brand-primary);
  background: -o-linear-gradient(to right, #fff , $brand-primary);
  background: -moz-linear-gradient(to right, #fff , $brand-primary);
  background: linear-gradient(to right, #fff , $brand-primary);

  position: absolute;
}

.rangeslider--horizontal .rangeslider__fill {
  top: 0;
  height: 100%;
}
.rangeslider--vertical .rangeslider__fill {
  bottom: 0;
  width: 100%;
}
/* ... */

